change email in env file from personal to NormPlov official email

--- a/app/templates/thank_you_feedback.html
+++ b/app/templates/thank_you_feedback.html
@@ -125,7 +125,7 @@
                     <tr>
                         <td bgcolor="#5cb85c" align="center" style="padding: 30px 30px 30px 30px; border-radius: 4px 4px 4px 4px; color: #ffffff; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
                             <h2 style="font-size: 20px; font-weight: 400; margin: 0;">Need Assistance?</h2>
-                            <p style="margin: 0;"><a href="mailto:support@example.com" style="color: #ffffff; text-decoration: underline;">We're here to help!</a></p>
+                            <p style="margin: 0;"><a href="mailto:normplov.istad@gmail.com" style="color: #ffffff; text-decoration: underline;">We're here to help!</a></p>
                         </td>
                     </tr>
                 </table>
